# Stock

./: .env.example  .gitignore  CHANGELOG_v2.md  CLAUDE.md  README.md  compare_strategies.py  deploy-config.example.json  deploy-config.json  fetch_data.py  index.html  main.py  multi_period_backtest.py  pyproject.toml  requirements.txt  run_live.py  run_trend_pullback.py
.claude/: settings.local.json
.omc/autopilot/: spec.md
analysis/: __init__.py  stats.py  visualizer.py
config/: live_settings.py  settings.py
crypto/: index.html
data/: features.py  fetcher.py
engine/: __init__.py  portfolio.py
live/: __init__.py  bot.py  client.py  data_manager.py  order_manager.py  position_manager.py  state.py
reports/: 2026-05-12.html  2026-05-13-deep-test.html  2026-05-13.html  2026-05-14.html  2026-05-18.html  2026-05-19.html  2026-05-20.html  index.html
strategies/: __init__.py  base.py  breakout.py  mean_reversion.py  momentum.py  short_breakout.py  short_mean_reversion.py  short_momentum.py  trend_pullback.py
utils/: __init__.py  helpers.py
weekly/: 2026-05-18.html
